switched type to din-condensed

--- a/css/i.css
+++ b/css/i.css
@@ -371,7 +371,7 @@ h3, .h3 {
    Site styles
    ========================================================================== */
 body {
-  font-family: 'Arimo', sans-serif;
+  font-family: "din-condensed-web", sans-serif;
   background-color: #EBEDF3;
   padding: 16px; }
 
