--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -4,7 +4,7 @@
 
 body {
   // -webkit-font-smoothing: antialiased;
-  font-family: 'Arimo', sans-serif;
+  font-family: "din-condensed-web", sans-serif;
   background-color: #EBEDF3;
   padding: 16px;
 }
