--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -3,8 +3,8 @@
    ========================================================================== */
 
 body {
-  // -webkit-font-smoothing: antialiased;
-  font-family: "din-condensed-web", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-family: "freight-sans-pro", sans-serif;
   background-color: #EBEDF3;
   padding: 16px;
 }
