--- a/css/i.css
+++ b/css/i.css
@@ -373,7 +373,7 @@ h3, .h3 {
 body {
   -webkit-font-smoothing: antialiased;
   font-family: "freight-sans-pro", sans-serif;
-  background-color: #EBEDF3;
+  background-color: #fff;
   padding: 16px; }
 
 header {
