--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -5,7 +5,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   font-family: "freight-sans-pro", sans-serif;
-  background-color: #EBEDF3;
+  background-color: #fff;
   padding: 16px;
 }
 
