--- a/css/i.css
+++ b/css/i.css
@@ -379,14 +379,12 @@ header {
   margin-bottom: 16px; }
   header h1 {
     color: #2E2F33;
-    font-weight: 700;
-    text-transform: uppercase;
-    -webkit-font-smoothing: antialiased; }
+    font-weight: 700; }
   header h2 {
     color: #505359;
     font-weight: 400; }
   header h1, header h2 {
-    margin: 0 0 4px 0; }
+    margin: 0 0 0 0; }
   header a {
     color: #505359; }
 
