--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,7 @@
 
 $near-black:  #111;
 $white: #fff;
+$blue: #1089F7;
 
 /* Gray scale */
 
@@ -24,11 +25,11 @@ $gray-light:  #eee;
  * 12 & 16 as roots then powers of two.
  */
 
-// $font-size-1:64px;
-// $font-size-2:48px;
-// $font-size-1:32px;
-$font-size-2:22px;
-$font-size-3:18px;
+$font-size-1:64px;
+$font-size-2:48px;
+$font-size-3:32px;
+// $font-size-4:22px;
+// $font-size-5:18px;
 // $font-size-6:12px;
 
 
