--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -4,7 +4,7 @@
 
 body {
   // -webkit-font-smoothing: antialiased;
-  font-family: "din-condensed-web", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   background-color: $white;
   padding: 64px;
 }
@@ -31,7 +31,7 @@ section {
     text-transform: uppercase;
   }
   ul {
-    font-size: $font-size-2;
+    font-size: $font-size-3;
     list-style: none;
     margin: 0;
     padding: 0;
