--- a/css/i.css
+++ b/css/i.css
@@ -374,7 +374,7 @@ h2, .h2 {
    Site styles
    ========================================================================== */
 body {
-  font-family: "freight-sans-pro", sans-serif;
+  font-family: "runda", sans-serif;
   background-color: white;
   padding: 64px; }
 
