--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -4,7 +4,7 @@
 
 body {
   // -webkit-font-smoothing: antialiased;
-  font-family: "freight-sans-pro", sans-serif;
+  font-family: "runda", sans-serif;
   background-color: $white;
   padding: 64px;
 }
