--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -16,7 +16,7 @@
    ========================================================================== */
 
 h1,.h1 {      font-size: $font-size-1; }
-h2,.h2 {      font-size: $font-size-3; }
+// h2,.h2 {      font-size: $font-size-3; }
 // h3,.h3 {      font-size: $font-size-3; }
 // h4,.h4 {      font-size: $font-size-4; }
 // h5,.h5 {      font-size: $font-size-5; }
