--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -3,10 +3,10 @@
    ========================================================================== */
 
 body {
-  // -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   font-family: "runda", sans-serif;
   background-color: $white;
-  padding: 64px;
+  padding: 32px;
 }
 
 header {
@@ -19,32 +19,6 @@ header {
   }
   a {
     color: $near-black;
-    text-decoration: none;
-    &:hover {
-      color: $blue;
-    }
-  }
-}
-
-section {
-  margin: 0 0 32px 0;
-  h2 {
-    color: $gray-medium;
-    margin: 0 0 32px 0;
-    text-transform: uppercase;
-  }
-  ul {
-    font-size: $font-size-3;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    li {
-      margin: 0 0 16px 0;
-    }
-  }
-  a {
-    font-weight: 400;
-    color: $gray-medium;
     text-decoration: none;
     &:hover {
       color: $blue;
