--- a/css/i.css
+++ b/css/i.css
@@ -377,11 +377,10 @@ body {
   padding: 32px; }
 
 header {
-  margin: 0 0 64px 0; }
+  margin: 0; }
   header h1 {
     color: #111111;
-    font-weight: 500;
-    margin: 0; }
+    font-weight: 500; }
   header a {
     color: #111111;
     text-decoration: none; }
