--- a/css/i.css
+++ b/css/i.css
@@ -366,7 +366,8 @@ h1, .h1 {
    ========================================================================== */
 @media (min-width: 480px) and (max-width: 1024px) {
   h1 {
-    font-size: 48px; } }
+    font-size: 48px;
+    margin: 0 0 16px 0; } }
 /* ==========================================================================
    Site styles
    ========================================================================== */
@@ -379,6 +380,7 @@ body {
 header {
   margin: 0; }
   header h1 {
+    margin: 0 0 32px 0;
     color: #111111;
     font-weight: 500; }
   header a {
