--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -12,6 +12,7 @@ body {
 header {
   margin: 0;
   h1 {
+    margin: 0 0 32px 0;
     color: $near-black;
     font-weight: 500;
     // -webkit-font-smoothing: antialiased;
