--- a/css/i.css
+++ b/css/i.css
@@ -361,13 +361,14 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   h1 {
-    font-size: 32px; } }
+    font-size: 32px;
+    margin: 0 0 16px 0; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) and (max-width: 1024px) {
   h1 {
     font-size: 48px;
-    margin: 0 0 16px 0; } }
+    margin: 0 0 24px 0; } }
 /* ==========================================================================
    Site styles
    ========================================================================== */
