--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -13,7 +13,7 @@
 
   h1 {
     font-size: $font-size-3;
-    margin: 0 0 16px 0;
+    margin: 0 0 16px 0 !important;
   }
 
 }
@@ -25,9 +25,9 @@
 
 @media (min-width: $breakpoint-2-min-width) and (max-width: $breakpoint-2-max-width) {
 
-    h1 {
+  h1 {
     font-size: $font-size-2;
-    margin: 0 0 24px 0;
+    margin: 0 0 24px 0 !important;
   }
 
 }
