--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -18,7 +18,7 @@ header {
     // -webkit-font-smoothing: antialiased;
   }
   a {
-    color: $gray-dark;
+    color: $gray-medium;
     text-decoration: none;
     &:hover {
       color: $blue;
