--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,9 +7,8 @@
 
 /* Don't use black */
 
-$near-black:  #111;
+$black:  #171819;
 $white: #fff;
-$blue: #1089F7;
 
 /* Gray scale */
 
@@ -28,9 +27,9 @@ $gray-light:  #eee;
 $font-size-1:64px;
 $font-size-2:48px;
 $font-size-3:32px;
-// $font-size-4:22px;
-// $font-size-5:18px;
-// $font-size-6:12px;
+$font-size-4:22px;
+$font-size-5:16px;
+$font-size-6:12px;
 
 
 /* Mobile */
