--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 body {
-  font-family: "futura", sans-serif;
+  font-family: "futura-pt", sans-serif;
   background-color: $white;
   color: $black;
   line-height: 1.65;
