--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -17,7 +17,7 @@ p {           font-size: $font-size-4; font-weight: 300;}
 /* Headings
    ========================================================================== */
 
-h1,.h1 {      font-size: $font-size-4; }
+h1,.h1 {      font-size: $font-size-4; font-weight: 800; }
 h2,.h2 {      font-size: $font-size-5; }
 // h3,.h3 {      font-size: $font-size-3; }
 // h4,.h4 {      font-size: $font-size-4; }
