--- a/css/i.css
+++ b/css/i.css
@@ -356,7 +356,8 @@ p {
 /* Headings
    ========================================================================== */
 h1, .h1 {
-  font-size: 22px; }
+  font-size: 22px;
+  font-weight: 800; }
 
 h2, .h2 {
   font-size: 16px; }
@@ -383,7 +384,7 @@ h2, .h2 {
    Site styles
    ========================================================================== */
 body {
-  font-family: "futura", sans-serif;
+  font-family: "futura-pt", sans-serif;
   background-color: white;
   color: #171819;
   line-height: 1.65;
