--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -11,9 +11,8 @@
 
 @media screen and (max-width: $breakpoint-1-max-width) {
 
-  h1 {
-    font-size: $font-size-3;
-    margin: 0 0 24px 0 !important;
+  body {
+    padding: 2rem;
   }
 
 }
@@ -25,9 +24,8 @@
 
 @media (min-width: $breakpoint-2-min-width) and (max-width: $breakpoint-2-max-width) {
 
-  h1 {
-    font-size: $font-size-2;
-    margin: 0 0 24px 0 !important;
+  body {
+    padding: 4rem;
   }
 
 }
