--- a/css/i.css
+++ b/css/i.css
@@ -350,17 +350,12 @@ h1, h2, h3, h4, h5, h6, p {
 /* Copy
    ========================================================================== */
 p {
-  font-size: 22px;
   font-weight: 400; }
 
 /* Headings
    ========================================================================== */
 h1, .h1 {
-  font-size: 22px;
   font-weight: 700; }
-
-h2, .h2 {
-  font-size: 16px; }
 
 /* ==========================================================================
    Media Queries
@@ -372,12 +367,14 @@ h2, .h2 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem; } }
+    padding: 2rem;
+    font-size: 18px; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) and (max-width: 1024px) {
   body {
-    padding: 4rem; } }
+    padding: 4rem;
+    font-size: 22px; } }
 /* ==========================================================================
    Site styles
    ========================================================================== */
