--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -13,6 +13,7 @@
 
   body {
     padding: 2rem;
+    font-size: $font-size-2;
   }
 
 }
@@ -26,6 +27,7 @@
 
   body {
     padding: 4rem;
+    font-size: $font-size-1;
   }
 
 }
