--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6, p { margin: 0;}
 /* Copy
    ========================================================================== */
 
-p {           font-size: $font-size-4; font-weight: 400;}
+p { font-weight: 400; }
 // .intro {      font-size: $font-size-3; }
 
 
@@ -17,8 +17,8 @@ p {           font-size: $font-size-4; font-weight: 400;}
 /* Headings
    ========================================================================== */
 
-h1,.h1 {      font-size: $font-size-4; font-weight: 700; }
-h2,.h2 {      font-size: $font-size-5; }
+h1,.h1 { font-weight: 700; }
+// h2,.h2 {      font-size: $font-size-2; }
 // h3,.h3 {      font-size: $font-size-3; }
 // h4,.h4 {      font-size: $font-size-4; }
 // h5,.h5 {      font-size: $font-size-5; }
