--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -13,6 +13,10 @@
 
   body {
     padding: 2rem;
+  }
+
+  h1,
+  p {
     font-size: $font-size-2;
   }
 
@@ -27,6 +31,10 @@
 
   body {
     padding: 4rem;
+  }
+
+  h1,
+  p {
     font-size: $font-size-1;
   }
 
