--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -27,7 +27,7 @@
 /* Tablet
    ========================================================================== */
 
-@media (min-width: $breakpoint-2-min-width) and (max-width: $breakpoint-2-max-width) {
+@media (min-width: $breakpoint-2-min-width) {
 
   body {
     padding: 4rem;
