--- a/css/i.css
+++ b/css/i.css
@@ -374,7 +374,7 @@ h1, .h1 {
     font-size: 18px; } }
 /* Tablet
    ========================================================================== */
-@media (min-width: 480px) and (max-width: 1024px) {
+@media (min-width: 480px) {
   body {
     padding: 4rem; }
 
