--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -17,7 +17,7 @@
 
   h1,
   p {
-    font-size: $font-size-2;
+    font-size: $font-size-3;
   }
 
 }
@@ -27,7 +27,7 @@
 /* Tablet
    ========================================================================== */
 
-@media (min-width: $breakpoint-2-min-width) {
+@media (min-width: $breakpoint-2-min-width) and (max-width: $breakpoint-2-max-width) {
 
   body {
     padding: 4rem;
@@ -35,7 +35,7 @@
 
   h1,
   p {
-    font-size: $font-size-1;
+    font-size: $font-size-2;
   }
 
 }
