--- a/css/i.css
+++ b/css/i.css
@@ -393,6 +393,10 @@ body {
   text-rendering: optimizeLegibility;
   text-transform: uppercase; }
 
+h1,
+p {
+  font-size: 32px; }
+
 a {
   color: #999999;
   text-decoration: none; }
