--- a/css/i.css
+++ b/css/i.css
@@ -367,20 +367,14 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem; }
-
-  h1,
-  p {
-    font-size: 18px; } }
+    padding: 2rem;
+    font-size: 22px; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) and (max-width: 1024px) {
   body {
-    padding: 4rem; }
-
-  h1,
-  p {
-    font-size: 22px; } }
+    padding: 4rem;
+    font-size: 32px; } }
 /* ==========================================================================
    Site styles
    ========================================================================== */
