--- a/css/i.css
+++ b/css/i.css
@@ -367,13 +367,19 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem;
+    padding: 2rem; }
+
+  h1,
+  p {
     font-size: 18px; } }
 /* Tablet
    ========================================================================== */
-@media (min-width: 480px) and (max-width: 1024px) {
+@media (min-width: 480px) {
   body {
-    padding: 4rem;
+    padding: 4rem; }
+
+  h1,
+  p {
     font-size: 22px; } }
 /* ==========================================================================
    Site styles
@@ -381,7 +387,6 @@ h1, .h1 {
 body {
   font-family: "futura-pt", sans-serif;
   background-color: white;
-  padding: 6rem;
   color: #999999;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
