--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -13,6 +13,10 @@
 
   body {
     padding: 2rem;
+  }
+
+  h1,
+  p {
     font-size: $font-size-2;
   }
 
@@ -23,10 +27,14 @@
 /* Tablet
    ========================================================================== */
 
-@media (min-width: $breakpoint-2-min-width) and (max-width: $breakpoint-2-max-width) {
+@media (min-width: $breakpoint-2-min-width) {
 
   body {
     padding: 4rem;
+  }
+
+  h1,
+  p {
     font-size: $font-size-1;
   }
 
