--- a/css/i.css
+++ b/css/i.css
@@ -367,11 +367,7 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem; }
-
-  h1,
-  p {
-    font-size: 18px; } }
+    padding: 2rem; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) {
