--- a/css/i.css
+++ b/css/i.css
@@ -367,7 +367,11 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem; } }
+    padding: 2rem; }
+
+  h1,
+  p {
+    font-size: 22px; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) {
