--- a/css/i.css
+++ b/css/i.css
@@ -367,20 +367,12 @@ h1, .h1 {
    ========================================================================== */
 @media screen and (max-width: 480px) {
   body {
-    padding: 2rem; }
-
-  h1,
-  p {
-    font-size: 22px; } }
+    padding: 1rem; } }
 /* Tablet
    ========================================================================== */
 @media (min-width: 480px) {
   body {
-    padding: 4rem; }
-
-  h1,
-  p {
-    font-size: 22px; } }
+    padding: 4rem; } }
 /* ==========================================================================
    Site styles
    ========================================================================== */
@@ -391,6 +383,10 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   text-transform: uppercase; }
+
+h1,
+p {
+  font-size: 22px; }
 
 a {
   color: #999999;
