--- a/i.css
+++ b/i.css
@@ -2,14 +2,24 @@ html,
 body {
   min-width: 100%;
   min-height: 100vh;
+  margin: 0;
 }
 
 body {
   display: flex;
-  flex-direction: row
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   font-family: monospace;
   color: #333;
   background-color: #fff;
+}
+
+.links {
+  list-style: none;
+  display: flex;
+
+  li {
+    padding: .125rem .25rem;
+  }
 }
