--- a/i.css
+++ b/i.css
@@ -7,7 +7,7 @@ body {
 
 body {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: monospace;
