--- a/i.css
+++ b/i.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: monospace;
+  font-size: 1.125rem;
   color: #333;
   background-color: #fff;
 }
@@ -18,6 +19,13 @@ body {
 
 header {
   text-align: center;
+}
+header h1 {
+  margin: 0;
+  font-size: 1em;
+}
+header p {
+  opacity: .7;
 }
 
 
