--- a/i.css
+++ b/i.css
@@ -12,6 +12,7 @@ body {
   align-items: center;
   font-family: 'PT Mono', monospace;
   font-size: 1rem;
+  line-height: 1.5;
   color: #333;
   background-color: #fff;
 }
@@ -25,16 +26,19 @@ header h1 {
   font-size: 1.125rem;
 }
 header p {
-  opacity: .7;
+  color: #999;
 }
 
 
 .links {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 .links li {
-  padding: .125rem .25rem;
+  padding: .25rem .5rem;
 }
