--- a/i.css
+++ b/i.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: 'PT Mono', monospace;
-  font-size: 1rem;
+  font-size: .875rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -23,7 +23,7 @@ header {
 }
 header h1 {
   margin: 0;
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 header p {
   color: #999;
@@ -35,7 +35,7 @@ header p {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0;
+  margin-top: 1.5rem;
   padding: 0;
   list-style: none;
 }
