--- a/i.css
+++ b/i.css
@@ -10,8 +10,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
   font-family: 'PT Mono', monospace;
-  font-size: .875rem;
+  font-size: 1rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -23,7 +24,6 @@ header {
 }
 header h1 {
   margin: 0;
-  font-size: 1rem;
 }
 header p {
   color: #999;
