--- a/i.css
+++ b/i.css
@@ -18,15 +18,22 @@ body {
   background-color: #fff;
 }
 
+a {
+  background-color: blue;
+  color: #fff;
+  text-decoration: none;
+}
+
 
 header {
   text-align: center;
 }
 header h1 {
   margin: 0;
+  font-size: 1rem;
 }
 header p {
-  color: #999;
+  color: #777;
 }
 
 
