--- a/i.css
+++ b/i.css
@@ -19,7 +19,10 @@ body {
 }
 
 a {
-  background-color: blue;
+  color: currentColor;
+}
+a:hover {
+  background-color: #333;
   color: #fff;
   text-decoration: none;
 }
