--- a/i.css
+++ b/i.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   padding: 1rem;
   font-family: 'PT Mono', monospace;
-  font-size: 1rem;
+  font-size: .875rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -48,6 +48,7 @@ header p {
   margin-top: 1.5rem;
   padding: 0;
   list-style: none;
+  color: #777;
 }
 .links li {
   padding: .25rem .5rem;
