--- a/i.css
+++ b/i.css
@@ -1,3 +1,5 @@
+* { box-sizing: border-box; }
+
 html,
 body {
   min-width: 100%;
@@ -11,8 +13,8 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  font-family: 'PT Mono', monospace;
-  font-size: .875rem;
+  font-family: 'Inconsolata', Menlo, monospace;
+  font-size: 1rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -33,7 +35,7 @@ header {
 }
 header h1 {
   margin: 0;
-  font-size: 1rem;
+  font-weight: 700;
 }
 header p {
   color: #777;
