--- a/i.css
+++ b/i.css
@@ -35,11 +35,11 @@ header {
 }
 header h1 {
   margin: 0;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 700;
 }
 header p {
-  color: #777;
+  color: #888;
 }
 
 
@@ -51,7 +51,8 @@ header p {
   margin-top: 1.5rem;
   padding: 0;
   list-style: none;
-  color: #777;
+  font-size: .875rem;
+  color: #888;
 }
 .links li {
   padding: .25rem .5rem;
