--- a/i.css
+++ b/i.css
@@ -48,7 +48,7 @@ header p {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 1.5rem;
+  /*margin-top: 1.5rem;*/
   padding: 0;
   list-style: none;
   font-size: .875rem;
