--- a/i.css
+++ b/i.css
@@ -50,6 +50,7 @@ header p {
   flex-wrap: wrap;
   /*margin-top: 1.5rem;*/
   padding: 0;
+  max-width: 10rem;
   list-style: none;
   font-size: .875rem;
   color: #888;
