--- a/i.css
+++ b/i.css
@@ -8,17 +8,9 @@ body {
 }
 
 body {
-  display: flex;
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  justify-content: center;
-  -webkit-justify-content: center;
-  align-items: center;
-  -webkit-align-items: center;
-  padding: 1rem;
-  font-family: 'Inconsolata', Menlo, monospace;
-  font-size: 1rem;
+  padding: 2rem;
+  font-family: 'Roboto Mono', Menlo, monospace;
+  font-size: 1.125rem;
   line-height: 1.5;
   color: #333;
   background-color: #fff;
@@ -26,6 +18,8 @@ body {
 
 a {
   color: currentColor;
+  border-radius: 2px;
+  text-decoration: none;
 }
 a:hover {
   background-color: #333;
@@ -33,36 +27,20 @@ a:hover {
   text-decoration: none;
 }
 
-
 header {
-  text-align: center;
+  margin-bottom: 2rem;
 }
 header h1 {
   margin: 0;
-  font-size: 1.125rem;
+  font-size: inherit;
   font-weight: 700;
 }
 header p {
-  font-size: 1.125rem;
-  color: #888;
+  margin: 0;
 }
-
 
 .links {
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-  -webkit-flex-wrap: wrap;
   padding: 0;
-  max-width: 14rem;
+  margin: 0;
   list-style: none;
-  font-size: .875rem;
-  color: #888;
-}
-.links li {
-  padding: .125rem .375rem;
 }
