--- a/i.css
+++ b/i.css
@@ -20,6 +20,10 @@ body {
   justify-content: center;
 }
 
+header {
+  margin: 0 0 1em 0;
+}
+
 .myface {
   font-size: 5rem;
 }
@@ -32,7 +36,7 @@ h1 {
 }
 
 p {
-  margin: 0 0 0 1em;
+  margin: 0;
   font-weight: normal;
 }
 
@@ -47,7 +51,7 @@ a:hover {
 
 .links {
   padding: 0;
-  margin: 0;
+  margin: 1em 0 0 0;
   list-style: none;
 }
 
