--- a/i.css
+++ b/i.css
@@ -2,9 +2,9 @@
 
 html,
 body {
-  min-width: 100%;
-  min-height: 100vh;
-  margin: 0;
+  /*min-width: 100%;*/
+  /*min-height: 100vh;*/
+  /*margin: 0;*/
 }
 
 body {
@@ -44,6 +44,7 @@ a:hover {
   padding: 0;
   margin: 1.25em 0 0 0;
   list-style: none;
+  font-size: 1.375rem;
 }
 
 .links-link {
