--- a/i.css
+++ b/i.css
@@ -2,9 +2,7 @@
 
 html,
 body {
-  /*min-width: 100%;*/
-  /*min-height: 100vh;*/
-  /*margin: 0;*/
+  margin: 0;
 }
 
 body {
@@ -43,7 +41,7 @@ a:hover {
 
 .links {
   padding: 0;
-  margin: 1.25em 0 0 0;
+  margin: 1em 0 0 0;
   list-style: none;
   font-size: 1.375rem;
 }
