--- a/i.css
+++ b/i.css
@@ -36,7 +36,6 @@ a {
 }
 a:hover {
   color: #fff;
-  text-decoration: underline;
 }
 
 .links {
@@ -49,4 +48,11 @@ a:hover {
 .links-link {
   display: inline-block;
   margin-right: 0.5rem;
+}
+
+.links-link a {
+  display: block;
+}
+.links-link a:hover {
+  transform: scale(1.25);
 }
