--- a/i.css
+++ b/i.css
@@ -8,7 +8,7 @@ body {
 body {
   padding: 2rem;
   font-family: -apple-system, sans-serif;
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   font-weight: 400;
   color: #aaa;
   background-color: #222;
@@ -42,7 +42,7 @@ a:hover {
   padding: 0;
   margin: 1em 0 0 0;
   list-style: none;
-  font-size: 1.375rem;
+  /*font-size: 1.375rem;*/
 }
 
 .links-link {
