--- a/i.css
+++ b/i.css
@@ -6,6 +6,10 @@ body {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
   padding: 2rem;
   font-family: -apple-system, sans-serif;
   font-size: 1.5rem;
