--- a/i.css
+++ b/i.css
@@ -19,8 +19,10 @@ body {
   background-color: #222;
 }
 
-header {
-  margin: 0 0 1em 0;
+.about,
+.email,
+.links {
+  margin: 1em 0 0 0;
 }
 
 h1 {
@@ -45,7 +47,6 @@ a:hover {
 
 .links {
   padding: 0;
-  margin: 1em 0 0 0;
   list-style: none;
   font-size: 1.5rem;
 }
