--- a/i.css
+++ b/i.css
@@ -21,6 +21,20 @@ body {
   margin: 1em 0 0 0;
 }
 
+.header:after {
+  content: '';
+  height: 1px;
+  width: 6em;
+  background-color: #fff;
+  opacity: 0.25;
+}
+
+.myface {
+  display: block;
+  margin-bottom: 1em;
+  font-size: 1.75rem;
+}
+
 h1 {
   margin: 0;
   font-size: inherit;
