--- a/i.css
+++ b/i.css
@@ -7,9 +7,12 @@ body {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 2rem 4rem;
   font-family: -apple-system, sans-serif;
-  font-size: 1.375rem;
+  font-size: 1.25rem;
   font-weight: 300;
   color: #aaa;
   background-color: #222;
@@ -31,19 +34,18 @@ a:hover {
 }
 
 .header {
-  position: relative;
   margin-bottom: 1em;
   color: #fff;
 }
 .myface {
   position: absolute;
   font-size: 2rem;
-  top: -.375rem;
-  left: -2.5rem;
+  top: 2rem;
+  left: 2rem;
 }
 
 .info {
-  font-size: 1.125rem;
+  /*font-size: 1.125rem;*/
 }
 
 .info > * {
