--- a/i.css
+++ b/i.css
@@ -10,10 +10,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2rem;
-  font-family: -apple-system, sans-serif;
-  font-size: 1.25rem;
-  font-weight: 300;
+  padding: 1.5rem;
+  font-family: 'roboto mono', monospace;
+  font-size: 1.125rem;
+  line-height: 1.5;
   color: #aaa;
   background-color: #222;
 }
@@ -40,8 +40,8 @@ a:hover {
 .myface {
   position: absolute;
   font-size: 2rem;
-  top: 2rem;
-  left: 2rem;
+  top: 1.5rem;
+  left: 1.5rem;
 }
 
 .info {
