--- a/i.css
+++ b/i.css
@@ -13,6 +13,7 @@ body {
   padding: 1.5rem;
   font-family: 'roboto mono', monospace;
   font-size: 2rem;
+  font-weight: 300;
   line-height: 1.5;
   color: #aaa;
   background-color: #222;
