--- a/i.css
+++ b/i.css
@@ -12,8 +12,6 @@ body {
   justify-content: center;
   padding: 1.5rem;
   font-family: 'roboto mono', monospace;
-  font-size: 2rem;
-  font-weight: 300;
   line-height: 1.5;
   color: #aaa;
   background-color: #222;
@@ -35,7 +33,7 @@ a:hover {
 }
 
 .header {
-  margin-bottom: 3em;
+  margin-bottom: 2em;
   color: #fff;
 }
 .myface {
@@ -46,7 +44,7 @@ a:hover {
 }
 
 .info > * {
-  margin-top: 1em;
+  margin-top: .5em;
 }
 
 .links {
