--- a/i.css
+++ b/i.css
@@ -13,8 +13,8 @@ body {
   padding: 1.5rem;
   font-family: 'roboto mono', monospace;
   line-height: 1.5;
-  color: #aaa;
-  background-color: #222;
+  color: #222;
+  background-color: #fff;
 }
 
 h1,
@@ -29,12 +29,11 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #fff;
+  color: #973039;
 }
 
 .header {
   margin-bottom: 2em;
-  color: #fff;
 }
 .myface {
   position: absolute;
@@ -43,8 +42,8 @@ a:hover {
   left: 1.5rem;
 }
 
-.info > * {
-  margin-top: .5em;
+.about {
+  margin-bottom: 2em;
 }
 
 .links {
