--- a/i.css
+++ b/i.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 1.5rem;
-  font-size: .875rem;
+  font-size: 1rem;
   font-family: 'roboto mono', monospace;
   line-height: 1.4;
   color: #222;
