--- a/i.css
+++ b/i.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   padding: 1.5rem;
   font-size: 1rem;
-  font-family: 'roboto mono', monospace;
+  font-family: -apple-system, 'roboto mono', monospace;
   line-height: 1.4;
   color: #222;
   background-color: #fff;
