--- a/i.css
+++ b/i.css
@@ -11,8 +11,8 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 1.5rem;
-  font-size: 1rem;
-  font-family: 'roboto mono', monospace;
+  font-size: 1.125rem;
+  font-family: -apple-system, -system, sans-serif;
   line-height: 1.5;
   color: #222;
   background-color: #fff;
